# lil-llm

./: .env.example  README.md  hello.py  pyproject.toml
lil_llm/: __init__.py  chat.py  cli.py  config.py
lil_llm/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  openai_provider.py
